# meerkat-desktop

./: .prettierignore  CLAUDE.md  Makefile  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
